CMakeLists file, and fixed tiny typo in README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,63 +7,30 @@ atlas_subdir( DerivationFrameworkEoverP )
 
 # Declare the package's dependencies:
 atlas_depends_on_subdirs( PUBLIC
-                          PhysicsAnalysis/D3PDTools/EventLoop
-                          Control/AthContainers
-                          Control/AthToolSupport/AsgTools
-                          Control/xAODRootAccess
-                          DataQuality/GoodRunsLists
-                          Event/xAOD/xAODBase
-                          Event/xAOD/xAODCaloEvent
-                          Event/xAOD/xAODCutFlow
-                          Event/xAOD/xAODEgamma
-                          Event/xAOD/xAODEventInfo
-                          Event/xAOD/xAODJet
-                          Event/xAOD/xAODMetaDataCnv
-                          Event/xAOD/xAODMissingET
-                          Event/xAOD/xAODMuon
-                          Event/xAOD/xAODTau
-                          Event/xAOD/xAODTracking
-                          Event/xAOD/xAODTrigger
-                          Event/xAOD/xAODTriggerCnv
-                          Event/xAOD/xAODTruth
-                          TileCalorimeter/TileEvent
-                          Calorimeter/CaloTrackingGeometry ##       InnerDetector/InDetRecTools
-                          PhysicsAnalysis/PrimaryDPDMaker ##this is needed to work
+                          GaudiKernel
+                          External/GaudiInterfaces
+                          Control/AthenBaseComps
+                          External/AtlasROOT
+                          PhysicsAnalysis/DerivationFramework/DerivationFrameworkInterfaces
+                          Trigger/TrigEvent/TrigCaloEvent
+                          Calorimeter/CaloIdentifier
                           Reconstruction/RecoTools/RecoToolInterfaces
-                          PhysicsAnalysis/D3PDTools/EventLoopGrid
-                          InnerDetector/InDetRecTools/InDetTrackSelectionTool
-                          PhysicsAnalysis/AnalysisCommon/AssociationUtils
-                          PhysicsAnalysis/AnalysisCommon/IsolationSelection
-                          PhysicsAnalysis/AnalysisCommon/PATInterfaces
-                          PhysicsAnalysis/AnalysisCommon/PMGTools
-                          PhysicsAnalysis/AnalysisCommon/PileupReweighting
-                          PhysicsAnalysis/D3PDTools/RootCoreUtils
-                          PhysicsAnalysis/D3PDTools/SampleHandler
-                          PhysicsAnalysis/ElectronPhotonID/ElectronEfficiencyCorrection
-                          PhysicsAnalysis/ElectronPhotonID/ElectronPhotonFourMomentumCorrection
-                          PhysicsAnalysis/ElectronPhotonID/ElectronPhotonSelectorTools
-                          PhysicsAnalysis/ElectronPhotonID/IsolationCorrections
-                          PhysicsAnalysis/ElectronPhotonID/ElectronPhotonShowerShapeFudgeTool
-                          PhysicsAnalysis/ElectronPhotonID/PhotonEfficiencyCorrection
-                          PhysicsAnalysis/JetMissingEtID/JetSelectorTools
-                          PhysicsAnalysis/Interfaces/MuonAnalysisInterfaces
-                          PhysicsAnalysis/MuonID/MuonIDAnalysis/MuonMomentumCorrections
-                          PhysicsAnalysis/MuonID/MuonIDAnalysis/MuonEfficiencyCorrections
-                          PhysicsAnalysis/TauID/TauAnalysisTools
-                          Reconstruction/Jet/JetAnalysisTools/JetTileCorrection
-                          Reconstruction/Jet/JetCalibTools
-                          Reconstruction/Jet/JetJvtEfficiency
-                          Reconstruction/Jet/JetMomentTools
-                          Reconstruction/Jet/JetResolution
-                          Reconstruction/Jet/JetSubStructureUtils
-                          Reconstruction/Jet/JetUncertainties
-                          Reconstruction/MET/METInterface
-                          Reconstruction/MET/METUtilities
-                          Tools/PathResolver
-                          Trigger/TrigAnalysis/TrigDecisionTool
-                          Trigger/TrigAnalysis/TriggerMatchingTool
-                          Trigger/TrigConfiguration/TrigConfxAOD
-                          ${release_depends}
+                          Event/xAOD/xAODCaloEvent
+                          PRIVATE
+                          Event/xAOD/xAODEventInfo
+                          Calorimeter/CaloEvent
+                          Calorimeter/CaloUtils
+                          TileCalorimeter/TileEvent
+                          Tracking/TrkExtrapolation/TrkExInterfaces
+                          Tracking/TrkEvent/TrkParamters
+                          Tracking/TrkEvent/TrkTrack
+                 	  Event/xAOD/xAODTracking 
+                          Calorimeter/CaloTrackingGeometry
+                          Tracking/TrkDetDescr/TrkSurfaces
+                          DetectorDescription/GeoPrimitives
+                          Tracking/TrkEvent/TrkCaloExtension
+                          Tracking/TrkEvent/TrkParamtersIdentificationHelpers
+                          Calorimeter/CaloDetDescr
 )
 
 # Find the needed external(s):
@@ -75,21 +42,5 @@ atlas_install_joboptions( share/*.py )
 atlas_add_component(DerivationFrameworkEoverP DerivationFrameworkEoverP/*.h Root/*.h Root/*.cxx Root/components/*.cxx ${DerivationFrameworkEoverPDictSource}
                    INCLUDE_DIRS ${ROOT_INCLUDE_DIRS}
                    LINK_LIBRARIES  ${ROOT_LIBRARIES} 
-                   xAODBase xAODRootAccess
-                   xAODEventInfo GoodRunsListsLib PileupReweightingLib PATInterfaces
-                   PathResolver xAODTau xAODJet xAODMuon 
-                   xAODEgamma TileEvent CaloTrackingGeometry
-                   xAODTracking xAODTruth MuonMomentumCorrectionsLib
-                   MuonEfficiencyCorrectionsLib
-                   MuonSelectorToolsLib JetCalibToolsLib
-                   JetSelectorToolsLib AthContainers
-                   ElectronPhotonFourMomentumCorrectionLib
-                   ElectronEfficiencyCorrectionLib ElectronPhotonSelectorToolsLib
-                   IsolationSelectionLib IsolationCorrectionsLib
-                   ElectronPhotonShowerShapeFudgeToolLib RecoToolInterfaces
-                   METUtilitiesLib METInterface
-                   AsgTools xAODMissingET JetResolutionLib
-                   TrigDecisionToolLib xAODCutFlow
-                   TriggerMatchingToolLib xAODMetaDataCnv xAODMetaData
-                   ${release_libs}
+                   ${release_libs} GaudiKernel RecoToolInterfaces TrkExInterfaces DerivationFrameworkInterfaces
 )
