--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ find_package( ROOT COMPONENTS Core RIO Hist Tree )
 atlas_install_python_modules( python/*.py )
 atlas_install_joboptions( share/*.py )
 
-atlas_add_component(DerivationFrameworkEoverP DerivationFrameworkEoverP/*.h src/*.cxx src/components/*.cxx ${DerivationFrameworkEoverPDictSource}
+atlas_add_component(DerivationFrameworkEoverP DerivationFrameworkEoverP/*.h src/*.cxx src/components/*.cxx
                    INCLUDE_DIRS ${ROOT_INCLUDE_DIRS}
                    LINK_LIBRARIES  ${ROOT_LIBRARIES} 
                    ${release_libs} GaudiKernel DerivationFrameworkInterfaces RecoToolInterfaces
