Added MC Truth Classifier to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,14 @@ atlas_depends_on_subdirs( PUBLIC
 			  Reconstruction/RecoTools/RecoToolInterfaces
 			  Event/EventPrimitives
 			  PhysicsAnalysis/BPhys/BPhysTools
-                          External/GaudiInterfaces
-                          External/AtlasROOT
-                          PhysicsAnalysis/DerivationFramework/DerivationFrameworkInterfaces
-                          Trigger/TrigEvent/TrigCaloEvent
-                          Calorimeter/CaloIdentifier
-                          Reconstruction/RecoTools/RecoToolInterfaces
-                          Event/xAOD/xAODCaloEvent
-                          Event/xAOD/xAODMuon
+              External/GaudiInterfaces
+              External/AtlasROOT
+              PhysicsAnalysis/DerivationFramework/DerivationFrameworkInterfaces
+              Trigger/TrigEvent/TrigCaloEvent
+              Calorimeter/CaloIdentifier
+              Reconstruction/RecoTools/RecoToolInterfaces
+              Event/xAOD/xAODCaloEvent
+              Event/xAOD/xAODMuon
 			  PRIVATE
 			  Event/xAOD/xAODBase
 			  Event/xAOD/xAODMetaData
@@ -39,28 +39,29 @@ atlas_depends_on_subdirs( PUBLIC
 			  Tracking/TrkEvent/TrkCaloExtension
 			  InnerDetector/InDetConditions/InDetBeamSpotService
 			  InnerDetector/InDetRecTools/InDetTrackSelectionTool
-                          Event/xAOD/xAODEventInfo
-                          Calorimeter/CaloEvent
-                          Calorimeter/CaloSimEvent
-                          Calorimeter/CaloUtils
+              Event/xAOD/xAODEventInfo
+              Calorimeter/CaloEvent
+              Calorimeter/CaloSimEvent
+              Calorimeter/CaloUtils
 			  PhysicsAnalysis/JpsiUpsilonTools
 			  TrkVKalVrtFitter/TrkVKalVrtFitter
 			  TileCalorimeter/TileEvent
-                          Tracking/TrkExtrapolation/TrkExInterfaces
-                          Tracking/TrkEvent/TrkParamters
+              Tracking/TrkExtrapolation/TrkExInterfaces
+              Tracking/TrkEvent/TrkParamters
 			  Tracking/TrkEvent/TrkTrack
-                 	  Event/xAOD/xAODTracking 
-                          Calorimeter/CaloTrackingGeometry
-                          Tracking/TrkDetDescr/TrkSurfaces
-                          DetectorDescription/GeoPrimitives
-                          Tracking/TrkEvent/TrkCaloExtension
-                          Tracking/TrkEvent/TrkParamtersIdentificationHelpers
+       	      Event/xAOD/xAODTracking 
+              Calorimeter/CaloTrackingGeometry
+              Tracking/TrkDetDescr/TrkSurfaces
+              DetectorDescription/GeoPrimitives
+              Tracking/TrkEvent/TrkCaloExtension
+              Tracking/TrkEvent/TrkParamtersIdentificationHelpers
 			  Tracking/TrkVertexFitter/TrkVertexAnalysisUtils
 			  InnerDetector/InDetConditions/InDetBeamSpotService
 			  PhysicsAnalysis/BPhys/BPhysTools
 			  Trigger/TrigAnalysis/TrigDecisionTool
-                          Calorimeter/CaloDetDescr
+              Calorimeter/CaloDetDescr
 			  InnerDetector/InDetRecAlgs/InDetV0Finder
+              PhysicsAnalysis/MCTruthClassifier
 )
 
 # Find the needed external(s):
@@ -72,9 +73,9 @@ atlas_install_joboptions( share/*.py )
 
 atlas_add_component(DerivationFrameworkEoverP DerivationFrameworkEoverP/*.h src/*.cxx src/components/*.cxx
                    INCLUDE_DIRS ${ROOT_INCLUDE_DIRS} ${HEPPDT_INCLUDE_DIRS}
-      		   LINK_LIBRARIES  ${ROOT_LIBRARIES}  ${HEPPDT_LIBRARIES}
+      		       LINK_LIBRARIES  ${ROOT_LIBRARIES}  ${HEPPDT_LIBRARIES}
                    ${release_libs} GaudiKernel xAODEventInfo TrkExInterfaces
                    RecoToolInterfaces xAODMuon JpsiUpsilonTools DataModel EventPrimitives xAODBPhys
                    PRIVATE_LINK_LIBRARIES TrkVertexAnalysisUtils TrackToVertex InDetV0FinderLib InDetBeamSpotServiceLib 
-                   TrkVertexAnalysisUtilsLib TrkVKalVrtFitterLib CaloSimEvent
+                   TrkVertexAnalysisUtilsLib TrkVKalVrtFitterLib CaloSimEvent MCTruthClassifier
 )
