--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ atlas_subdir( DerivationFrameworkEoverP )
 
 # Declare the package's dependencies:
 atlas_depends_on_subdirs( PUBLIC
+              Calorimeter/CaloUtils
               Control/AthContainers
 			  GaudiKernel
 			  Event/xAOD/xAODMuon
@@ -26,10 +27,10 @@ atlas_depends_on_subdirs( PUBLIC
               Trigger/TrigEvent/TrigCaloEvent
               Calorimeter/CaloIdentifier
               Reconstruction/RecoTools/RecoToolInterfaces
-              Event/xAOD/xAODCaloEvent
               Event/xAOD/xAODMuon
               Event/xAOD/xAODTruth
 			  PRIVATE
+              Event/xAOD/xAODCaloEvent
 			  Event/xAOD/xAODBase
 			  Event/xAOD/xAODMetaData
 			  Tracking/TrkVertexFitter/TrkVertexAnalysisUtils
@@ -42,9 +43,7 @@ atlas_depends_on_subdirs( PUBLIC
 			  InnerDetector/InDetConditions/InDetBeamSpotService
 			  InnerDetector/InDetRecTools/InDetTrackSelectionTool
               Event/xAOD/xAODEventInfo
-              Calorimeter/CaloEvent
               Calorimeter/CaloSimEvent
-              Calorimeter/CaloUtils
 			  PhysicsAnalysis/JpsiUpsilonTools
 			  TrkVKalVrtFitter/TrkVKalVrtFitter
 			  TileCalorimeter/TileEvent
@@ -76,8 +75,8 @@ atlas_install_joboptions( share/*.py )
 atlas_add_component(DerivationFrameworkEoverP DerivationFrameworkEoverP/*.h src/*.cxx src/components/*.cxx
                    INCLUDE_DIRS ${ROOT_INCLUDE_DIRS} ${HEPPDT_INCLUDE_DIRS}
       		       LINK_LIBRARIES  ${ROOT_LIBRARIES}  ${HEPPDT_LIBRARIES}
-                   ${release_libs} GaudiKernel xAODEventInfo TrkExInterfaces
+                   ${release_libs} GaudiKernel xAODEventInfo TrkExInterfaces CaloUtilsLib
                    RecoToolInterfaces xAODMuon JpsiUpsilonTools DataModel EventPrimitives xAODBPhys
                    PRIVATE_LINK_LIBRARIES TrkVertexAnalysisUtils TrackToVertex InDetV0FinderLib InDetBeamSpotServiceLib 
-                   TrkVertexAnalysisUtilsLib TrkVKalVrtFitterLib CaloSimEvent MCTruthClassifierLib xAODTruth
+                   TrkVertexAnalysisUtilsLib TrkVKalVrtFitterLib CaloSimEvent MCTruthClassifierLib xAODTruth 
 )
